@@ -32,7 +32,7 @@ EXPORTS
 	winx_load_driver@4
 	winx_unload_driver@4
 	winx_create_thread@12
-	winx_exit_thread@0
+	winx_exit_thread@4
 	winx_enable_privilege@4
 	winx_get_drive_type@4
 	winx_get_volume_information@8
